# rust-async-api

./: Cargo.toml  README.md
src/: lib.rs  main.rs  state.rs
src/api/: health.rs  user.rs  users.rs
src/controller/: health.rs  user.rs
src/domain/: user.rs
src/error/: app_error.rs
src/model/: error.rs  mod.rs  user.rs
src/repository/: in_memory_user_repository.rs  mod.rs
src/service/: user_service.rs
tests/: health_tests.rs  repository_tests.rs  service_tests.rs  user_tests.rs
