[package]
name = "rust-async-api"
version = "0.1.0"
authors = ["https://github.com/cameronfisher1"]
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
